[package]
name = "tempus"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = { version = "0.15.7" }
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "1.1.8" , features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls"]}
tokio = { version = "1.44.1", features = ["full"] }
log = "0.4.27"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
once_cell = "1.21.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
uuid = { version = "1.16", features = ["v4"] }
