[package]
name = "tempus"
version = "0.1.0"
edition = "2024"

[lib]
name = "tempus"
path = "src/lib.rs"

[dependencies]
dotenvy = { version = "0.15.7" }
reqwest = { version = "0.12", features = ["json"] }
sea-orm = { version = "1.1.8" , features = ["macros", "sqlx-postgres", "runtime-tokio-native-tls"]}
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7"
log = "0.4.27"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0.140"
rdkafka = { version = "0.36", features = ["tokio"] }
env_logger = "0.11.8"
once_cell = "1.21.3"
thiserror = "2.0.12"
config = "0.15.13"
serde = { version = "1.0", features = ["derive"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[[bin]]
name = "tempus"
path = "src/main.rs"

[[bin]]
name = "tempus-api"
path = "src/main-api.rs"

[dev-dependencies]
async-trait = "0.1"
